CremaFeature requires RuntimeClassLoadingFeature